# GBTM

./: .gitignore  README.md  implementation.py  pyproject.toml  requirements.txt
gbtm/: __init__.py  core.py  main.py  models.py  test.ipynb
src/gbtm/: core.py  utils.py
src/gbtm/distributions/: __init__.py  base.py  bernoulli.py  dropout.py  tobit.py  zip.py
src/gbtm/models/: __init__.py  gbtm_old.py
tests/: conftest.py  test_GBTM.py  test_base.py  test_bernoulli.py  test_dropout.py
