[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GBTM"
version = "0.1.0"
description = "A short description of your package"
authors = [
  { name="Loy Xueheng Enoch", email="loyenoch@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
